<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="group_0359.frontend.UserActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_view_all_clients"
        android:orderInCategory="100"
        android:title="@string/action_view_all_clients"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_view_all_flights"
        android:orderInCategory="100"
        android:title="@string/action_view_all_flights"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_upload_system_data"
        android:orderInCategory="100"
        android:title="@string/action_upload_system_data"
        android:visible="false"
        app:showAsAction="never"/>

</menu>