<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="group_0359.frontend.EditUserActivity" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#31556D" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#446883"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/email_txt"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/email_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_edit"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#31556D" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/personal_information_txt"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#2E3642"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/first_name_txt"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/first_name_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_hint"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:text="@string/first_name_edit" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/last_name_txt"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/last_name_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name_hint"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:text="@string/last_name_edit" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/address_txt"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/address_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_hint"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:text="@string/address_edit" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/password_txt"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:text="@string/address_edit" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#9DCDB8" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/billing_information_txt"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#2E3642"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/credit_card_num_txt"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/credit_card_num_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/credit_card_num_hint"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:inputType="number"
                    android:text="@string/credit_card_num_edit" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/expiry_date_txt"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/expiry_year_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="start"
                        android:gravity="center_horizontal"
                        android:hint="@string/year_hint"
                        android:inputType="number"
                        android:maxLength="4"
                        android:singleLine="true"
                        android:text="@string/expiry_year_edit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/slash_txt" />

                    <EditText
                        android:id="@+id/expiry_month_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="start"
                        android:gravity="center_horizontal"
                        android:hint="@string/month_hint"
                        android:inputType="number"
                        android:maxLength="2"
                        android:singleLine="true"
                        android:text="@string/expiry_month_edit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/slash_txt" />

                    <EditText
                        android:id="@+id/expiry_day_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="start"
                        android:gravity="center_horizontal"
                        android:hint="@string/day_hint"
                        android:inputType="number"
                        android:maxLength="2"
                        android:singleLine="true"
                        android:text="@string/expiry_day_edit" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#31556D" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#0A0B0F"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveUser"
            android:text="@string/save_user_txt" />

        <Button
            android:id="@+id/cancel_user_edit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelUser"
            android:text="@string/cancel_txt" />
    </LinearLayout>

</LinearLayout>